--- a/templates/checkout/index.html.twig
+++ b/templates/checkout/index.html.twig
@@ -5,5 +5,7 @@
 {% block body %}
 
 <a href="{{ path('checkout_session') }}" class="btn btn-primary mx-2 my-2">Checkout</a>
+<a href="{{ path('checkout_simple') }}" class="btn btn-success mx-2 my-2">Checkout simple</a>
+<a href="{{ path('checkout_recuperation') }}" class="btn btn-danger mx-2 my-2">Checkout récupération</a>
 
 {% endblock %}
